# gpui-boilerplate

./: .gitignore  .oxlintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  deploy-docs.yml
crates/gpui-query/: Cargo.toml
crates/gpui-query/src/: lib.rs
crates/gpui-query/src/client/: bucket.rs  mod.rs
crates/gpui-query/src/core/: key.rs  key_filter.rs  mod.rs  policy.rs  request.rs  resource.rs  signal.rs  status.rs
crates/gpui-query/src/core/resource/: accessors.rs  cache.rs  completion.rs  lifecycle.rs
crates/gpui-query/src/hook/: mod.rs  options.rs
crates/gpui-query/src/tests/: core_cache.rs  core_data_retention.rs  core_lifecycle.rs  core_request.rs  integration_client.rs  test_support.rs
docs/: accessibility-checklist.md  architecture.md  desktop-boilerplate-features-plan.md  liquid-glass-launcher.md  native-notifications-plan.md  qa-matrix.md  query-mvp-plan.md  query-plan.md
i18n/en/: gpui-starter.ftl
i18n/zh-CN/: gpui-starter.ftl
public/: llms.txt  site.webmanifest
scripts/: generate-og.ts  macos-dev-app.sh  run-macos-dev-app.sh  seo-fix-workflow.js
src/: accessibility.rs  app.rs  app_menu.rs  app_state.rs  capabilities.rs  commands.rs  connectivity.rs  db_migrations.rs  desktop_actions.rs  error_surface.rs  errors.rs  events.rs  first_run.rs  i18n.rs  ids.rs  input_validation.rs  ipc.rs  launcher.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  menus.rs  paths.rs  root.rs  routes.rs  secure_storage.rs  session.rs  shortcuts.rs  sidebar.rs  single_instance.rs  status_bar.rs  storage.rs  tasks.rs  telemetry.rs  testing.rs  testing.test.rs  title_bar.rs  tray.rs  undo_stack.rs  (+1 more)
src/app/: lifecycle.rs  mod.rs
src/features/: command_palette.rs  mod.rs
src/features/pages/: about.rs  form_page_stub.rs  home.rs  http_lab.rs  http_lab_testing.rs  mod.rs  notifications.rs
src/foundation/: ids.rs  mod.rs  time.rs  validation.rs  validation.test.rs
src/notifications/: inbox.rs  mod.rs  service.rs
src/notifications/backend/: mod.rs  notify_rust.rs  user_notify.rs
src/persistence/sqlite/: db_migrations.rs  db_migrations.test.rs
src/platform/: liquid_glass.rs  mod.rs
src/platform/desktop_shell/: mod.rs  tray.rs
src/platform/ipc/: mod.rs  mod.test.rs
src/platform/network/: websocket.rs  websocket.test.rs
src/platform/process/: single_instance.rs  single_instance.test.rs
src/runtime/: capabilities.rs  events.rs  events.test.rs  mod.rs
src/services/: commands.rs  connectivity.rs  desktop_actions.rs  error_surface.rs  error_surface.test.rs  http_lab.rs  http_lab.test.rs  logging.rs  mod.rs  secure_storage.rs  storage.rs  storage.test.rs  tasks.rs  telemetry.rs  telemetry.test.rs  tokio_runtime.rs  undo_stack.rs  undo_stack.test.rs
src/services/http_lab/: cache.test.rs  client.rs  data_retention.test.rs  flow.test.rs  operations.rs  optimistic.test.rs  response.rs  response.test.rs  signal.test.rs  state.rs  task_tracking.rs  tasks.test.rs  test_support.rs  transitions.rs  types.rs
src/services/notifications/: service.rs
src/services/query/: error.rs  key.rs  mod.rs  query.test.rs  request.rs  resource.rs  test_support.rs
src/services/query/resource/: accessors.rs  cache.rs  completion.rs  lifecycle.rs
src/services/query/tests/: cache.rs  lifecycle.rs  request.rs
src/shell/: mod.rs  root.rs  route.rs  route.test.rs  sidebar.rs  status_bar.rs
src/state/: config_store.rs  config_store.test.rs  migrations.rs  migrations.test.rs  mod.rs
src/ui/: mod.rs
src/views/: about.rs  diagnostics.rs  form_page.rs  home.rs  mod.rs  notifications.rs  settings.rs
src/web/components/: AppPreview.astro
src/web/content/docs/docs/: themes.md
src/web/layouts/: MarketingLayout.astro
src/web/pages/: about.astro  index.astro  privacy.astro  robots.txt.ts  terms.astro
src/web/styles/: globals.css  starlight.css
tests/: e2e_lifecycle.rs  e2e_navigation.rs  qa_docs.rs  snapshot_tests.rs
tests/support/: mod.rs  rendering.rs
themes/: crush.json  high-contrast-dark.json  high-contrast-light.json
web/: content.config.ts
web/components/: AppPreview.astro  AudioPlayer.astro  SocialIcon.astro
web/content/blog/: building-command-launcher-gpui.md  building-desktop-apps-rust-gpui.md  custom-titlebar-gpui.md  desktop-notifications-rust.md  form-validation-koruma-rust.md  getting-started-with-gpui.md  gpui-vs-egui-vs-iced.md  internationalization-gpui-apps.md  scaling-gpui-prototype-to-production.md  secure-credential-storage.md  sidebar-navigation-gpui.md  single-instance-rust-app.md  state-management-gpui-entities.md  testing-gpui-applications.md  theme-system-deep-dive.md  undo-redo-rust-desktop-apps.md
web/content/docs/docs/: architecture.md  command-launcher.md  forms.md  getting-started.md  i18n.md  index.md  notifications.md  performance.md  routing.md  secure-storage.md  testing.md  themes.md
web/content/faq/: adding-themes.md  command-launcher.md  data-storage.md  diagnostics.md  first-run-experience.md  form-validation.md  how-to-install.md  internationalization.md  keyboard-shortcuts.md  notifications.md  secure-storage.md  supported-platforms.md  telemetry.md  theme-system.md  tray-icon.md  undo-redo-support.md  what-is-gpui.md  why-gpui-starter.md
web/layouts/: MarketingLayout.astro
web/pages/: about.astro  changelog.astro  feed.atom.ts  feed.xml.ts  index.astro  privacy.astro  sitemap.xml.ts  terms.astro
web/pages/blog/: [...slug].astro  index.astro
web/pages/faq/: [...slug].astro  index.astro
web/pages/og/blog/: [...slug].png.ts
web/styles/: globals.css
web/util/: author.ts  changelog.ts
