[workspace]
members = ["."]

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
], default-features = false }
tokio = { version = "1", features = ["rt", "sync", "time"] }
async-trait = "0.1"
rust-i18n = "3"
regex = "1"
koruma = { version = "0.9", features = ["fluent"] }
koruma-collection = { version = "0.9", features = ["full-fluent"] }
es-fluent = { version = "0.16", features = ["derive"] }
es-fluent-build = "0.16"
es-fluent-lang = "0.16"
es-fluent-manager-embedded = "0.16"
strum = { version = "0.28", features = ["derive"] }
gpui-form = { git = "file:///Users/hmziq/os/gpui-app/vendor/gpui-form", rev = "02f7d09c4418740ca2dc022e9d7a56bbc257acf2" }

[package]
name = "gpui-starter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
async-trait.workspace = true
rust-i18n.workspace = true
regex.workspace = true
koruma.workspace = true
koruma-collection.workspace = true
es-fluent.workspace = true
es-fluent-lang.workspace = true
es-fluent-manager-embedded.workspace = true
strum.workspace = true
gpui-form.workspace = true
user-notify = "0.4.2"
notify-rust = "4.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = { version = "0.24", default-features = false }
global-hotkey = "0.8"
block2 = "0.6"
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "NSBundle",
    "NSError",
    "NSString",
] }
objc2-user-notifications = { version = "0.3.0", default-features = false, features = [
    "std",
    "block2",
    "UNNotificationSettings",
    "UNUserNotificationCenter",
] }

[build-dependencies]
es-fluent-build.workspace = true


[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
