[workspace]
members = ["."]

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
], default-features = false }
tokio = { version = "1", features = ["rt", "sync", "time", "io-util", "net"] }
async-trait = "0.1"
rust-i18n = "3"
regex = "1"
koruma = { version = "0.9", features = ["fluent"] }
koruma-collection = { version = "0.9", features = ["full-fluent"] }
es-fluent = { version = "0.16", features = ["derive"] }
es-fluent-build = "0.16"
es-fluent-lang = "0.16"
es-fluent-manager-embedded = "0.16"
strum = { version = "0.28", features = ["derive"] }
gpui-form = { git = "file:///Users/hmziq/os/gpui-app/vendor/gpui-form", rev = "02f7d09c4418740ca2dc022e9d7a56bbc257acf2" }

[package]
name = "gpui-starter"
version = "0.2.0"
edition = "2024"
publish = false

[features]
# Enable OTLP export over HTTP/Protobuf for the telemetry module.
# See src/telemetry.rs for the full list of optional dependencies this pulls in.
otlp = ["dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]
websocket = []

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
tokio.workspace = true
async-trait.workspace = true
rust-i18n.workspace = true
regex.workspace = true
koruma.workspace = true
koruma-collection.workspace = true
es-fluent.workspace = true
es-fluent-lang.workspace = true
es-fluent-manager-embedded.workspace = true
strum.workspace = true
gpui-form.workspace = true
user-notify = "0.4.2"
notify-rust = "4.17.0"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.8"
directories = "6.0.0"
atomic-write-file = "0.3.0"
semver = "1.0.28"
tempfile = "3.27.0"
single-instance = "0.3.3"
interprocess = { version = "2.4.2", features = ["tokio"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "blocking",
    "cookies",
    "json",
    "multipart",
    "rustls-tls",
] }
network-interface = "2.0.3"
keyring = { version = "3.6.3", features = ["apple-native"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
opentelemetry = "0.24.0"
tracing-opentelemetry = "0.25.0"
# Optional: OTLP HTTP exporter for remote telemetry (enable with --features otlp)
opentelemetry-otlp = { version = "0.17.0", optional = true, features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry_sdk = { version = "0.24.1", optional = true, features = [
    "rt-tokio",
    "trace",
] }
open = "5.3.2"
arboard = "3.6.1"
rfd = "0.15.4"
notify = "8.2.0"
undo = "0.52.0"
accesskit = "0.21.1"
sys-locale = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = { version = "0.24", default-features = false }
global-hotkey = "0.8"
block2 = "0.6"
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "NSBundle",
    "NSError",
    "NSString",
] }
objc2-user-notifications = { version = "0.3.0", default-features = false, features = [
    "std",
    "block2",
    "UNNotificationSettings",
    "UNUserNotificationCenter",
] }

[build-dependencies]
es-fluent-build.workspace = true


[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
