[package]
name = "gpui-query"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["client"]
core = []
client = ["core", "dep:gpui"]
hook = ["client"]

[dependencies]
serde = { workspace = true }
gpui = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
